--- a/eBado/eBado.csproj
+++ b/eBado/eBado.csproj
@@ -201,13 +201,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Account\ChangePasswordViewModel.cs" />
+    <Compile Include="Models\Account\ForgotPasswordViewModel.cs" />
+    <Compile Include="Models\Account\LoginViewModel.cs" />
+    <Compile Include="Models\Account\RegisterCompanyViewModel.cs" />
+    <Compile Include="Models\Account\RegisterPartTimeJobViewModel.cs" />
+    <Compile Include="Models\Account\RegisterSelfEmployedViewModel.cs" />
+    <Compile Include="Models\Account\RegisterUserViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\css\bootstrap-theme.css" />
     <Content Include="Assets\css\bootstrap.css" />
     <Content Include="Assets\css\button.css" />
     <Content Include="Assets\css\font-awesome.min.css" />
@@ -218,7 +224,8 @@
     <Content Include="Assets\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Assets\js\bootstrap-hover-dropdown.js" />
     <Content Include="Assets\js\bootstrap.js" />
-    <Content Include="Assets\js\jquery-1.11.1.min.js" />
+    <Content Include="Assets\js\jquery-3.1.1.js" />
+    <Content Include="Assets\js\style.js" />
     <Content Include="Global.asax" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -238,6 +245,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Account\" />
     <Folder Include="Views\Manage\" />
   </ItemGroup>
   <ItemGroup>
@@ -251,7 +259,6 @@
     <Content Include="Assets\fonts\glyphicons-halflings-regular.woff" />
     <None Include="Project_Readme.html" />
     <Content Include="Views\Home\Index2.cshtml" />
-    <Content Include="Views\Account\Login.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
