--- a/eBado/eBado.csproj
+++ b/eBado/eBado.csproj
@@ -201,13 +201,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Account\ChangePasswordViewModel.cs" />
-    <Compile Include="Models\Account\ForgotPasswordViewModel.cs" />
-    <Compile Include="Models\Account\LoginViewModel.cs" />
-    <Compile Include="Models\Account\RegisterCompanyViewModel.cs" />
-    <Compile Include="Models\Account\RegisterPartTimeJobViewModel.cs" />
-    <Compile Include="Models\Account\RegisterSelfEmployedViewModel.cs" />
-    <Compile Include="Models\Account\RegisterUserViewModel.cs" />
+    <Compile Include="Models\Account\ChangePasswordModel.cs" />
+    <Compile Include="Models\Account\ForgotPasswordModel.cs" />
+    <Compile Include="Models\Account\LoginModel.cs" />
+    <Compile Include="Models\Account\RegisterFormModel.cs" />
+    <Compile Include="Models\Account\RegisterHelper\RegisterCompanyModel.cs" />
+    <Compile Include="Models\Account\RegisterHelper\RegisterPartTimeJobModel.cs" />
+    <Compile Include="Models\Account\RegisterHelper\RegisterSelfEmployedModel.cs" />
+    <Compile Include="Models\Account\RegisterHelper\RegisterUserModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -245,7 +246,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Account\" />
     <Folder Include="Views\Manage\" />
   </ItemGroup>
   <ItemGroup>
@@ -259,6 +259,8 @@
     <Content Include="Assets\fonts\glyphicons-halflings-regular.woff" />
     <None Include="Project_Readme.html" />
     <Content Include="Views\Home\Index2.cshtml" />
+    <Content Include="Views\Home\Index3.cshtml" />
+    <Content Include="Views\Account\RegisterNewAccount.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
