--- a/eBado/Web.eBado.csproj
+++ b/eBado/Web.eBado.csproj
@@ -13,8 +13,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>eBado</RootNamespace>
-    <AssemblyName>eBado</AssemblyName>
+    <RootNamespace>Web.eBado</RootNamespace>
+    <AssemblyName>Web.eBado</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -205,10 +205,11 @@
     <Compile Include="Models\Account\ForgotPasswordModel.cs" />
     <Compile Include="Models\Account\LoginModel.cs" />
     <Compile Include="Models\Account\RegisterFormModel.cs" />
+    <Compile Include="Models\Account\RegisterHelper\RegisterBaseModel.cs" />
     <Compile Include="Models\Account\RegisterHelper\RegisterCompanyModel.cs" />
     <Compile Include="Models\Account\RegisterHelper\RegisterPartTimeJobModel.cs" />
     <Compile Include="Models\Account\RegisterHelper\RegisterSelfEmployedModel.cs" />
-    <Compile Include="Models\Account\RegisterHelper\RegisterUserModel.cs" />
+    <Compile Include="Models\Account\RegisterHelper\RegisterStandardUserModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -238,7 +239,9 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
