--- a/eBado/Web.config
+++ b/eBado/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-eBado-20170228081328.mdf;Initial Catalog=aspnet-eBado-20170228081328;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-eBado-20170228081328.mdf;Initial Catalog=aspnet-eBado-20170228081328;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="EBADODBDboEntitiesConnectionString" connectionString="metadata=res://Infrastructure.Common.DB/EBADOModel.csdl|res://Infrastructure.Common.DB/EBADOModel.ssdl|res://Infrastructure.Common.DB/EBADOModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=localhost\masterdb;Initial Catalog=EBADODB;Integrated Security=False;Persist Security Info=True;User ID=sa;Password=admin159&quot;"
+      providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
