--- a/Infrastructure.Common/Infrastructure.Common.csproj
+++ b/Infrastructure.Common/Infrastructure.Common.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountType.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserRole.cs" />
   </ItemGroup>
