--- a/eBado/Web.eBado.csproj
+++ b/eBado/Web.eBado.csproj
@@ -204,12 +204,7 @@
     <Compile Include="Models\Account\ChangePasswordModel.cs" />
     <Compile Include="Models\Account\ForgotPasswordModel.cs" />
     <Compile Include="Models\Account\LoginModel.cs" />
-    <Compile Include="Models\Account\RegisterFormModel.cs" />
-    <Compile Include="Models\Account\RegisterHelper\RegisterBaseModel.cs" />
-    <Compile Include="Models\Account\RegisterHelper\RegisterCompanyModel.cs" />
-    <Compile Include="Models\Account\RegisterHelper\RegisterPartTimeJobModel.cs" />
-    <Compile Include="Models\Account\RegisterHelper\RegisterSelfEmployedModel.cs" />
-    <Compile Include="Models\Account\RegisterHelper\RegisterStandardUserModel.cs" />
+    <Compile Include="Models\Account\RegisterModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -231,6 +226,7 @@
     <Content Include="Global.asax" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -264,6 +260,16 @@
     <Content Include="Views\Home\Index2.cshtml" />
     <Content Include="Views\Home\Index3.cshtml" />
     <Content Include="Views\Account\RegisterNewAccount.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure.Common.DB\Infrastructure.Common.DB.csproj">
+      <Project>{6B3ADF23-F140-4A73-96F0-23F98F14F90F}</Project>
+      <Name>Infrastructure.Common.DB</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Infrastructure.Common\Infrastructure.Common.csproj">
+      <Project>{C0F4027E-B71A-448E-9950-A27E5CE6D55C}</Project>
+      <Name>Infrastructure.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
