--- a/eBado/Web.eBado.csproj
+++ b/eBado/Web.eBado.csproj
@@ -204,7 +204,11 @@
     <Compile Include="Models\Account\ChangePasswordModel.cs" />
     <Compile Include="Models\Account\ForgotPasswordModel.cs" />
     <Compile Include="Models\Account\LoginModel.cs" />
-    <Compile Include="Models\Account\RegisterModel.cs" />
+    <Compile Include="Models\Account\RegisterBase.cs" />
+    <Compile Include="Models\Account\RegisterCompany.cs" />
+    <Compile Include="Models\Account\RegisterPartTime.cs" />
+    <Compile Include="Models\Account\RegisterSelfEmployed.cs" />
+    <Compile Include="Models\Account\RegisterUser.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -228,6 +232,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Assets\js\jquery.validate.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -259,8 +264,10 @@
     <None Include="Project_Readme.html" />
     <Content Include="Views\Home\Index2.cshtml" />
     <Content Include="Views\Home\Index3.cshtml" />
-    <Content Include="Views\Account\RegisterNewAccount.cshtml" />
-    <Content Include="Views\Account\TestReg.cshtml" />
+    <Content Include="Views\Account\RegisterCompany.cshtml" />
+    <Content Include="Views\Account\RegisterSelfEmployed.cshtml" />
+    <Content Include="Views\Account\RegisterUser.cshtml" />
+    <Content Include="Views\Account\RegisterPartTime.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure.Common.DB\Infrastructure.Common.DB.csproj">
