--- a/eBado/Web.config
+++ b/eBado/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-eBado-20170228081328.mdf;Initial Catalog=aspnet-eBado-20170228081328;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="EBADODBDboEntitiesConnectionString" connectionString="metadata=res://Infrastructure.Common.DB/EBADOModel.csdl|res://Infrastructure.Common.DB/EBADOModel.ssdl|res://Infrastructure.Common.DB/EBADOModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=localhost\masterdb;Initial Catalog=EBADODB;Integrated Security=False;Persist Security Info=True;User ID=sa;Password=admin159&quot;" providerName="System.Data.EntityClient" />
+    <add name="EBADODBDboEntitiesConnectionString" connectionString="metadata=res://Infrastructure.Common.DB/EBADOModel.csdl|res://Infrastructure.Common.DB/EBADOModel.ssdl|res://Infrastructure.Common.DB/EBADOModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=localhost\masterdb;Initial Catalog=EBADODB;Integrated Security=False;Persist Security Info=True;User ID=sa;Password=oracle;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
